FTP/TLS and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.8.3 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.3]
- [Feature] Added MacVim to the list of supported editors (http://code.google.com/p/macvim/) [#1322]
- [Bugfix] Directory parser compatibility (FTP) [#1412, #1270, #1302, #1076, #1172, #1213, #1253, #1258, #1284, #1331]
- [Bugfix] Does not change to correct directory when using a bookmark to the same server [#1411]

2.8.2 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.2]
- [Feature] Show transfer progress when using browser session [#1313]
- [Feature] Accept relative paths in bookmark setting [#1167]
- [Feature] Ugly folder icons rendered (10.5)
- [Feature] Back and forward history menu for browser navigation buttons [#1080]
- [Bugfix] Writing corrupted entries to the Keychain [#1354]
- [Bugfix] Cannot drag files to working directory when there is no space left [#60]
- [Bugfix] Bookmarks drawer remembers width [#371]
- [Bugfix] Crashes after application launch (10.3.9) [#1339]
- [Bugfix] Downloading multiple files with same name in outline hierarchy [#1400]

2.8.1 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.1]
- [Feature] Application code is signed (10.5)
- [Bugfix] Saving file in external editor does not cause upload (10.5) [#1244]
- [Bugfix] Login failure with correct credentials [#1231]
- [Bugfix] Failure to list directory on some servers (SFTP) [#1170]
- [Bugfix] Transfers fails with punctuation characters in path (SCP) [#1265]

2.8 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8]
- [Feature] Using Ganymed SSH2 library [#185]
- [Feature] Support for SCP transfers [#1043]
- [Feature] Queuing file transfers [#986]
- [Feature] Automatic retry of failed network operations [#783]
- [Feature] Limit available bandwidth for transfers [#48]