@@ -12,11 +12,17 @@
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=2.8.3">
 		2.8.3</a></strong> <em></em> (Build $Revision$)<br />
-		
+		<br />
+		<strong>This update should fix many crashes and is strongly recommended.</strong>
 		<ul>
-			<li>[Feature] Added MacVim to the list of supported editors (http://code.google.com/p/macvim/) [<a href="http://trac.cyberduck.ch/ticket/1322">#1322</a>]</li>
-			<li>[Bugfix] Directory parser compatibility (FTP) [#1412, #1270, #1302, #1076, #1172, #1213, #1253, #1258, #1284, #1331]</li>
+			<li>[Feature] Toolbar button to open Terminal.app SSH session in current working directory (SFTP) [<a href="http://trac.cyberduck.ch/ticket/1508">#1508</a>]</li>
+			<li>[Feature] Added MacVim to the list of supported editors (<a href="http://code.google.com/p/macvim/">http://code.google.com/p/macvim/</a>) [<a href="http://trac.cyberduck.ch/ticket/1322">#1322</a>]</li>
+			<li>[Feature] Custom icon for executable files [<a href="http://trac.cyberduck.ch/ticket/945">#945</a>]</li>
+			<li>[Bugfix] Frequent crashes [<a href="http://trac.cyberduck.ch/ticket/1401">#1401</a>, <a href="http://trac.cyberduck.ch/ticket/1409">#1409</a>]</li>
 			<li>[Bugfix] Does not change to correct directory when using a bookmark to the same server [<a href="http://trac.cyberduck.ch/ticket/1411">#1411</a>]</li>
+			<li>[Bugfix] Directory parser compatibility with Webstar Server (FTP) [<a href="http://trac.cyberduck.ch/ticket/1302">#1302</a>]</li>
+			<li>[Bugfix] Directory parser compatibility with Freebox Server (FTP) [<a href="http://trac.cyberduck.ch/ticket/1258">#1258</a>]</li>
+			<li>[Bugfix] Directory parser compatibility with Trellix Server (FTP) [<a href="http://trac.cyberduck.ch/ticket/1213">#1213</a>]</li>
 		</ul>
 	</div>
 
@@ -28,11 +34,10 @@
 		<ul>
 			<li>[Feature] Show transfer progress when using browser session [<a href="http://trac.cyberduck.ch/ticket/1313">#1313</a>]</li>
 			<li>[Feature] Accept relative paths in bookmark setting [<a href="http://trac.cyberduck.ch/ticket/1167">#1167</a>]</li>
-			<li>[Feature] Added MacVim to the list of supported editors (http://slashpunt.org/vim/) [<a href="http://trac.cyberduck.ch/ticket/1322">#1322</a>]</li>
 			<li>[Feature] Ugly folder icons rendered (10.5)</li>
 			<li>[Feature] Back and forward history menu for browser navigation buttons [<a href="http://trac.cyberduck.ch/ticket/1080">#1080</a>]</li>
-			<li>[Bugfix] Writing corrupted entries to the Keychain (10.5) [<a href="http://trac.cyberduck.ch/ticket/1354">#1354</a>]<br />
-				<strong>Warning! Due to this bug you may have to reenter your passwords the first time connecting to each server</strong></li>
+			<li>[Bugfix] Writing corrupted entries to the Keychain (Intel, 10.5) [<a href="http://trac.cyberduck.ch/ticket/1354">#1354</a>]<br />
+				<strong>Warning! Due to this bug you may have to reenter your passwords the first time connecting to each server. If you still encounter problems logging in, delete all saved passwords for this server using <i>Keychain Access.app</i></strong>.</li>
 			<li>[Bugfix] Cannot drag files to working directory when there is no space left [<a href="http://trac.cyberduck.ch/ticket/60">#60</a>]</li>
 			<li>[Bugfix] Bookmarks drawer remembers width [<a href="http://trac.cyberduck.ch/ticket/371">#371</a>]</li>
 			<li>[Bugfix] Crashes after application launch (10.3.9) [<a href="http://trac.cyberduck.ch/ticket/1339">#1339</a>]</li>
